--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "maptalks": "^0.49.4",
+    "maptalks.heatmap": "^0.6.2",
+    "openmeteo": "^1.1.3",
     "pinia": "^2.1.7",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.40.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
@@ -28,6 +33,7 @@
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.0.3",
+    "sass": "^1.69.5",
     "typescript": "~5.2.0",
     "vite": "^4.4.11",
     "vue-tsc": "^1.8.19"
