--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "chart.js": "^4.4.0",
     "maptalks": "^0.49.4",
     "maptalks.heatmap": "^0.6.2",
     "openmeteo": "^1.1.3",
